@@ -1,1 +1,1 @@
-11.6.0-rc2
+11.6.0
