@@ -1,3 +1,7 @@
+2013-10-21  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.6.0 Released.
+
 2013-10-18  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.6.0-rc2 Released.
